Added: rails-i18n, ru.yml, text for errors (ru, en)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,10 @@
 
 en:
   hello: "Hello world"
+  errors:
+    attributes:
+      username:
+        invalid: Use only letters, numbers and _
+        too_long: Maximum 40 symbols
+      text:
+        too_long: Maximum 255 symbols
